# MTLExtraction

./: .gitignore  CMakeLists.txt  README.md
src/: BinaryMathOperation.cxx  BinaryMathOperation.h  CMakeLists.txt  ClassMatrix.cxx  ClassMatrix.h  CoordinateMap.cxx  CoordinateMap.h  CreateCylinder.cxx  CreateCylinder.h  CreateMolds.cxx  CreateMolds.h  EnergyFunctions.cxx  EnergyFunctions.h  ExtractBackground.cxx  ExtractBackground.h  ExtrudeSegmentation.cxx  ExtrudeSegmentation.h  GradientDescentCF.h  LBFGSCF.h  Main.cxx  MathematicalMorphology.cxx  MathematicalMorphology.h  OrientationCuts.cxx  OrientationCylinder.cxx  OriginVoxels.cxx  OriginVoxels.h  PadImage.cxx  PadImage.h  PowellCF.h  ReadImage.cxx  ReadImage.h  ReadMatrix.cxx  ReadMatrix.h  ReferencePlan.cxx  ReferencePlan.h  ReplaceIntensities.cxx  ReplaceIntensities.h  ResliceImage.cxx  ResliceImage.h  SetOrientation.cxx  (+8 more)
